--- a/2. Downstream_Analysis.Rmd
+++ b/2. Downstream_Analysis.Rmd
@@ -51,14 +51,16 @@ go_res <- enrichGO(
     gene = gene_entrez,
     OrgDb = org.Mm.eg.db,
     keyType = "ENTREZID",
-    ont = "BP")
+    ont = "BP", 
+    pAdjustMethod = "fdr")
 
 barplot(go_res, showCategory = 20)
 
 # Filter the GO terms from the enrichGO object directly
-pattern <- "nervous system development|nervous system process|regulation of apoptotic signaling pathway|neuron|neurogenesis|axon|axogenesis|spinal|synapse|acute|innate|plasticity|regulation of autophagy|regulation of inflammatory response"
+pattern <- "nervous system development|nervous system process|apoptotic signaling pathway|neuron|neurogenesis|axon|axogenesis|spinal|synapse|acute|innate|plasticity|regulation of autophagy|regulation of inflammatory response|metallopeptidase|^regulation of peptidase activity$"
 filtered_go_res <- go_res
 filtered_go_res@result <- filtered_go_res@result %>%
+  filter(p.adjust < 0.1) %>%
   dplyr::filter(stringr::str_detect(Description, regex(pattern, ignore_case = TRUE)))
 
 # Tidy table
@@ -70,23 +72,14 @@ gene_go <- filtered_go_res@result %>%
                        keys = gene,
                        keytype = "ENTREZID",
                        column = "SYMBOL"))
-gene_go <- gene_go[!grepl("substrate", gene_go$go_term), ]
-gene_go <- gene_go[!grepl("prostate", gene_go$go_term), ]
-gene_go <- gene_go[!grepl("leukocyte", gene_go$go_term), ]
-gene_go <- gene_go[!grepl("postsynaptic", gene_go$go_term), ]
-gene_go <- gene_go[!grepl("homotypic", gene_go$go_term), ]
-gene_go <- gene_go[!grepl("cell-matrix", gene_go$go_term), ]
-gene_go <- gene_go[!grepl("neuron projection extension involved in neuron projection guidance", gene_go$go_term), ]
-gene_go <- gene_go[!grepl("protein localization to synapse", gene_go$go_term), ]
-gene_go <- gene_go[!grepl("protein localization to postsynapse", gene_go$go_term), ]
-gene_go <- gene_go[!grepl("spinal cord patterning", gene_go$go_term), ]
-gene_go <- gene_go[!grepl("ventral spinal cord interneuron fate commitment", gene_go$go_term), ]
-gene_go <- gene_go[!grepl("dopaminergic neuron differentiation", gene_go$go_term), ]
-gene_go <- gene_go[!grepl("peripheral nervous system development", gene_go$go_term), ]
-gene_go <- gene_go[!grepl("spinal cord dorsal/ventral patterning", gene_go$go_term), ]
-gene_go <- gene_go[!grepl("prostatic bud formation", gene_go$go_term), ]
 
-# gene_go <- gene_go %>%  filter(p)
+gene_go <- gene_go[!grepl("peripheral nervous system development", gene_go$go_term), ]
+gene_go <- gene_go[!grepl("receptor localization", gene_go$go_term), ]
+gene_go <- gene_go %>%
+  filter(!(go_term == "regulation of peptidase activity" & !(gene %in% c(
+  "Lgals3", "Postn", "Col3a1", "Serpina3n", "C1qa", "Tnc", "C1qc", "C1qb", "Thbs2", "S100a9",
+  "Sema6d", "Shh", "Cxcl12", "Hapln2", "Spock3", "Lgi1", "Tnfaip6", "F12", "Serpinb1a", "F2"
+))))
  
 genes_sci <- unique(gene_go$gene)
 
@@ -149,12 +142,14 @@ go_res <- enrichGO(
     gene = gene_entrez,
     OrgDb = org.Mm.eg.db,
     keyType = "ENTREZID",
-    ont = "BP")
+    ont = "BP", 
+    pAdjustMethod = "fdr")
 
 # Filter the GO terms from the enrichGO object directly
-pattern <- "nervous system development|nervous system process|regulation of apoptotic signaling pathway|neuron|neurogenesis|axon|axogenesis|spinal|synapse|acute|innate|plasticity|regulation of autophagy|regulation of inflammatory response|Wnt|Notch|phosphatidylinositol|MAPK|NF-kappaB|BMP|STAT|SMAD|toll-like|Rho"
+pattern <- "nervous system development|nervous system process|regulation of apoptotic signaling pathway|neuron|neurogenesis|axon|axogenesis|spinal|synapse|acute|innate|plasticity|regulation of autophagy|regulation of inflammatory response|metallopeptidase|^regulation of peptidase activity$|Wnt|Notch|phosphatidylinositol|MAPK|NF-kappaB|BMP|STAT|SMAD|toll-like|Rho|tumor necrosis factor"
 filtered_go_res <- go_res
 filtered_go_res@result <- filtered_go_res@result %>%
+  filter(p.adjust < 0.1) %>%
   dplyr::filter(stringr::str_detect(Description, regex(pattern, ignore_case = TRUE)))
 
 # Tidy table
@@ -166,22 +161,18 @@ gene_go <- filtered_go_res@result %>%
                        keys = gene,
                        keytype = "ENTREZID",
                        column = "SYMBOL"))
-gene_go <- gene_go[!grepl("substrate", gene_go$go_term), ]
+
 gene_go <- gene_go[!grepl("prostate", gene_go$go_term), ]
-gene_go <- gene_go[!grepl("leukocyte", gene_go$go_term), ]
-gene_go <- gene_go[!grepl("postsynaptic", gene_go$go_term), ]
-gene_go <- gene_go[!grepl("homotypic", gene_go$go_term), ]
-gene_go <- gene_go[!grepl("cell-matrix", gene_go$go_term), ]
-gene_go <- gene_go[!grepl("neuron projection extension involved in neuron projection guidance", gene_go$go_term), ]
-gene_go <- gene_go[!grepl("protein localization to synapse", gene_go$go_term), ]
-gene_go <- gene_go[!grepl("protein localization to postsynapse", gene_go$go_term), ]
-gene_go <- gene_go[!grepl("spinal cord patterning", gene_go$go_term), ]
-gene_go <- gene_go[!grepl("ventral spinal cord interneuron fate commitment", gene_go$go_term), ]
-gene_go <- gene_go[!grepl("dopaminergic neuron differentiation", gene_go$go_term), ]
+gene_go <- gene_go[!grepl("protein localization", gene_go$go_term), ]
 gene_go <- gene_go[!grepl("peripheral nervous system development", gene_go$go_term), ]
-gene_go <- gene_go[!grepl("spinal cord dorsal/ventral patterning", gene_go$go_term), ]
-gene_go <- gene_go[!grepl("prostatic bud formation", gene_go$go_term), ]
-gene_go <- gene_go[!grepl("receptor localization to synapse", gene_go$go_term), ]
+gene_go <- gene_go[!grepl("prostatic", gene_go$go_term), ]
+gene_go <- gene_go[!grepl("neuron projection extension involved in neuron projection guidance", gene_go$go_term), ]
+
+gene_go <- gene_go %>%
+  filter(!(go_term == "regulation of peptidase activity" & !(gene %in% c(
+  "Lgals3", "Postn", "Col3a1", "Serpina3n", "C1qa", "Tnc", "C1qc", "C1qb", "Thbs2", "S100a9",
+  "Sema6d", "Shh", "Cxcl12", "Hapln2", "Spock3", "Lgi1", "Tnfaip6", "F12", "Serpinb1a", "F2"
+))))
 
 signaling_pathways <- list(
   `TGF-B Signaling` = c(
@@ -237,7 +228,10 @@ signaling_pathways <- list(
                       "regulation of BMP signaling pathway", 
                       "BMP signaling pathway", "response to BMP", "cellular response to BMP stimulus"),
   `TLR Signaling` = c("toll-like receptor signaling pathway",
-                      "regulation of toll-like receptor signaling pathway"))
+                      "regulation of toll-like receptor signaling pathway"),
+  `TNF Signaling` = 
+    "tumor necrosis factor"
+    )
 
 # Categories
 gene_go <- gene_go %>%
@@ -254,6 +248,7 @@ gene_go <- gene_go %>%
       go_term %in% signaling_pathways$`STAT Signaling` ~ "STAT Signaling",
       go_term %in% signaling_pathways$`BMP Signaling` ~ "BMP Signaling",
       go_term %in% signaling_pathways$`TLR Signaling` ~ "TLR Signaling",
+      go_term %in% signaling_pathways$`TNF Signaling` ~ "TNF Signaling",
       TRUE ~ go_term  
     )
   ) %>%
@@ -357,66 +352,6 @@ col_fun3_ <- colorRamp2(c(min(matrix_pval_signaling), max(matrix_pval_signaling)
 Plots
 
 ```{r}
-gene_regulation_status <- gene_regulation_status[colnames(matrix_binary_signaling)]
-
-regulation_colors <- c("Up" = "red", "Down" = "blue")
-
-column_annotation <- HeatmapAnnotation(
-    "Regulation"= anno_simple(
-        gene_regulation_status, 
-        col = regulation_colors,
-        gp = gpar(col = "white", lwd = 1.5)),
-    annotation_name_side = "left",
-    annotation_name_gp = gpar(fontsize = 9))
-
-
-hm_binary_signaling <- Heatmap(matrix_binary_signaling,
-                               name = "Status",
-                               col = col_fun_,
-                               rect_gp = gpar(col = "white", lwd = 2),
-                               clustering_method_columns = "ward.D2",
-                               clustering_distance_columns = "euclidean",
-                               cluster_rows = FALSE,
-                               show_row_dend = FALSE,
-                               show_column_dend = FALSE,
-                               row_names_gp = gpar(fontsize = 9),
-                               row_names_side = "left",
-                               column_names_rot = 90,
-                               column_names_gp = gpar(fontsize = 9),
-                               heatmap_legend_param = list(title = "Status", at = c(0, 1),
-                                                           labels = c("Absent", "Present")),
-                               column_title = " ",
-                               column_title_gp = gpar(fontsize = 12),
-                               bottom_annotation = column_annotation)
-
-# Heatmap for signaling terms - Count
-hm_count_signaling <- Heatmap(matrix_counts_signaling,
-                              rect_gp = gpar(col = "white", lwd = 2),
-                              name = "Count",
-                              col = col_fun2_,
-                              cluster_rows = FALSE,
-                              cluster_columns = FALSE,
-                              show_row_names = FALSE,
-                              width = unit(1, "cm"),
-                              column_title = " ",
-                              column_names_rot = 90,
-                              column_names_gp = gpar(fontsize = 8),
-                              column_title_gp = gpar(fontsize = 8))
-
-# Heatmap for signaling terms - P-value
-hm_pval_signaling <- Heatmap(matrix_pval_signaling,
-                             rect_gp = gpar(col = "white", lwd = 2),
-                             name = "-log10 P-value",
-                             col = col_fun3_,
-                             cluster_rows = FALSE,
-                             cluster_columns = FALSE,
-                             show_row_names = FALSE,
-                             width = unit(1, "cm"),
-                             column_title = " ",
-                             column_names_rot = 90,
-                             column_names_gp = gpar(fontsize = 8),
-                             column_title_gp = gpar(fontsize = 8))
-
 gene_regulation_status2 <- gene_regulation_status[colnames(matrix_binary_non_signaling)]
 
 regulation_colors <- c("Up" = "red", "Down" = "blue")
@@ -485,6 +420,67 @@ regulation_legend <- Legend(
   legend_gp = gpar(fill = c("Up" = "red", "Down" = "blue"))
 )
 
+gene_regulation_status <- gene_regulation_status[colnames(matrix_binary_signaling)]
+
+regulation_colors <- c("Up" = "red", "Down" = "blue")
+
+column_annotation <- HeatmapAnnotation(
+    "Regulation"= anno_simple(
+        gene_regulation_status, 
+        col = regulation_colors,
+        gp = gpar(col = "white", lwd = 1.5)),
+    annotation_name_side = "left",
+    annotation_name_gp = gpar(fontsize = 9))
+
+
+hm_binary_signaling <- Heatmap(matrix_binary_signaling,
+                               name = "Status",
+                               col = col_fun_,
+                               rect_gp = gpar(col = "white", lwd = 2),
+                               clustering_method_columns = "ward.D2",
+                               clustering_distance_columns = "euclidean",
+                               cluster_rows = FALSE,
+                               show_row_dend = FALSE,
+                               show_column_dend = FALSE,
+                               row_names_gp = gpar(fontsize = 9),
+                               row_names_side = "left",
+                               column_names_rot = 90,
+                               column_names_gp = gpar(fontsize = 9),
+                               heatmap_legend_param = list(title = "Status", at = c(0, 1),
+                                                           labels = c("Absent", "Present")),
+                               column_title = " ",
+                               column_title_gp = gpar(fontsize = 12),
+                               bottom_annotation = column_annotation)
+
+# Heatmap for signaling terms - Count
+hm_count_signaling <- Heatmap(matrix_counts_signaling,
+                              rect_gp = gpar(col = "white", lwd = 2),
+                              name = "Count",
+                              col = col_fun2_,
+                              cluster_rows = FALSE,
+                              cluster_columns = FALSE,
+                              show_row_names = FALSE,
+                              width = unit(1, "cm"),
+                              column_title = " ",
+                              column_names_rot = 90,
+                              column_names_gp = gpar(fontsize = 8),
+                              column_title_gp = gpar(fontsize = 8))
+
+# Heatmap for signaling terms - P-value
+hm_pval_signaling <- Heatmap(matrix_pval_signaling,
+                             rect_gp = gpar(col = "white", lwd = 2),
+                             name = "-log10 P-value",
+                             col = col_fun3_,
+                             cluster_rows = FALSE,
+                             cluster_columns = FALSE,
+                             show_row_names = FALSE,
+                             width = unit(1, "cm"),
+                             column_title = " ",
+                             column_names_rot = 90,
+                             column_names_gp = gpar(fontsize = 8),
+                             column_title_gp = gpar(fontsize = 8))
+
+
 draw(hm_binary_non_signaling + hm_count_non_signaling + hm_pval_non_signaling, annotation_legend_list = list(regulation_legend), annotation_legend_side = "right")
 draw(hm_binary_signaling + hm_count_signaling + hm_pval_signaling, annotation_legend_list = list(regulation_legend), annotation_legend_side = "right")
 
@@ -500,6 +496,8 @@ dev.off()
 
 # Genes with GO-Terms SCI-Associated
 genes_acute <- unique(c(colnames(matrix_binary_non_signaling), colnames(matrix_binary_signaling)))
+
+saveRDS(genes_acute, file = "~/R/Downloads/Genes_Acute.rds")
 
 saveRDS(matrix_binary_non_signaling, file = "~/R/Downloads/Go_Acute.rds")
 
@@ -525,16 +523,17 @@ go_res <- enrichGO(
     gene = gene_entrez,
     OrgDb = org.Mm.eg.db,
     keyType = "ENTREZID",
-    ont = "BP")
+    ont = "BP", 
+    pAdjustMethod = "fdr")
 
 barplot(go_res, showCategory = 20)
 
-
 # Filter the GO terms from the enrichGO object directly
-pattern <- "nervous system|nervous system process|regulation of apoptotic signaling pathway|axogenesis|neuron|neurogenesis|axon|spinal|synapse|chronic|long-term|plasticity|regulation of autophagy|regulation of inflammatory response"
+pattern <- "nervous system|nervous system process|apoptotic signaling pathway|axogenesis|neuron|neurogenesis|axon|spinal|synapse|chronic|long-term|plasticity|regulation of autophagy|regulation of inflammatory response|metallopeptidase|^regulation of peptidase activity$"
 
 filtered_go_res <- go_res
 filtered_go_res@result <- filtered_go_res@result %>%
+  filter(p.adjust < 0.1) %>%
   dplyr::filter(stringr::str_detect(Description, regex(pattern, ignore_case = TRUE)))
 
 # Tidy table
@@ -546,22 +545,15 @@ gene_go <- filtered_go_res@result %>%
                        keys = gene,
                        keytype = "ENTREZID",
                        column = "SYMBOL"))
-gene_go <- gene_go[!grepl("substrate", gene_go$go_term), ]
-gene_go <- gene_go[!grepl("prostate", gene_go$go_term), ]
-gene_go <- gene_go[!grepl("leukocyte", gene_go$go_term), ]
-gene_go <- gene_go[!grepl("postsynaptic", gene_go$go_term), ]
-gene_go <- gene_go[!grepl("homotypic", gene_go$go_term), ]
-gene_go <- gene_go[!grepl("cell-matrix", gene_go$go_term), ]
-gene_go <- gene_go[!grepl("neuron projection extension involved in neuron projection guidance", gene_go$go_term), ]
-gene_go <- gene_go[!grepl("protein localization to synapse", gene_go$go_term), ]
-gene_go <- gene_go[!grepl("protein localization to postsynapse", gene_go$go_term), ]
-gene_go <- gene_go[!grepl("spinal cord patterning", gene_go$go_term), ]
-gene_go <- gene_go[!grepl("ventral spinal cord interneuron fate commitment", gene_go$go_term), ]
-gene_go <- gene_go[!grepl("dopaminergic neuron differentiation", gene_go$go_term), ]
+
 gene_go <- gene_go[!grepl("peripheral nervous system development", gene_go$go_term), ]
-gene_go <- gene_go[!grepl("spinal cord dorsal/ventral patterning", gene_go$go_term), ]
-gene_go <- gene_go[!grepl("prostatic bud formation", gene_go$go_term), ]
-gene_go <- gene_go[!grepl("receptor localization to synapse", gene_go$go_term), ]
+gene_go <- gene_go[!grepl("sympathetic", gene_go$go_term), ]
+
+gene_go <- gene_go %>%
+  filter(!(go_term == "regulation of peptidase activity" & !(gene %in% c(
+  "Lgals3", "Thbs2", "Postn", "Cbln1", "Srpx2", "Hapln1", "Lgi2", "Plxna4", "Plxnb1",
+  "Serpina3n", "Thbs1", "Lgals9", "Lama5", "Fn1", "Lamb2", "Hspg2", "Tgm2", "Dcn", "Cxcl12", "S100a9"
+))))
 
 genes_sci <- unique(gene_go$gene)
 
@@ -632,12 +624,14 @@ go_res <- enrichGO(
     gene = gene_entrez,
     OrgDb = org.Mm.eg.db,
     keyType = "ENTREZID",
-    ont = "BP")
+    ont = "BP", 
+    pAdjustMethod = "fdr")
 
 # Filter the GO terms from the enrichGO object directly
-pattern <- "nervous system|nervous system process|regulation of apoptotic signaling pathway|axogenesis|neuron|neurogenesis|axon|spinal|synapse|chronic|long-term|plasticity|regulation of autophagy|regulation of inflammatory response|Wnt|Notch|phosphatidylinositol|MAPK|NF-kappaB|BMP|STAT|SMAD|toll-like|Rho"
+pattern <- "nervous system|nervous system process|regulation of apoptotic signaling pathway|axogenesis|neuron|neurogenesis|axon|spinal|synapse|chronic|long-term|plasticity|regulation of autophagy|regulation of inflammatory response|metallopeptidase|^regulation of peptidase activity$|Wnt|Notch|phosphatidylinositol|MAPK|NF-kappaB|BMP|STAT|SMAD|toll-like|Rho|tumor necrosis factor"
 filtered_go_res <- go_res
 filtered_go_res@result <- filtered_go_res@result %>%
+  filter(p.adjust < 0.1) %>%
   dplyr::filter(stringr::str_detect(Description, regex(pattern, ignore_case = TRUE)))
 
 # Tidy table
@@ -649,22 +643,21 @@ gene_go <- filtered_go_res@result %>%
                        keys = gene,
                        keytype = "ENTREZID",
                        column = "SYMBOL"))
-gene_go <- gene_go[!grepl("substrate", gene_go$go_term), ]
+
 gene_go <- gene_go[!grepl("prostate", gene_go$go_term), ]
-gene_go <- gene_go[!grepl("leukocyte", gene_go$go_term), ]
-gene_go <- gene_go[!grepl("postsynaptic", gene_go$go_term), ]
-gene_go <- gene_go[!grepl("homotypic", gene_go$go_term), ]
-gene_go <- gene_go[!grepl("cell-matrix", gene_go$go_term), ]
-gene_go <- gene_go[!grepl("neuron projection extension involved in neuron projection guidance", gene_go$go_term), ]
-gene_go <- gene_go[!grepl("protein localization to synapse", gene_go$go_term), ]
-gene_go <- gene_go[!grepl("protein localization to postsynapse", gene_go$go_term), ]
-gene_go <- gene_go[!grepl("spinal cord patterning", gene_go$go_term), ]
-gene_go <- gene_go[!grepl("ventral spinal cord interneuron fate commitment", gene_go$go_term), ]
-gene_go <- gene_go[!grepl("dopaminergic neuron differentiation", gene_go$go_term), ]
+gene_go <- gene_go[!grepl("protein localization", gene_go$go_term), ]
 gene_go <- gene_go[!grepl("peripheral nervous system development", gene_go$go_term), ]
-gene_go <- gene_go[!grepl("spinal cord dorsal/ventral patterning", gene_go$go_term), ]
-gene_go <- gene_go[!grepl("prostatic bud formation", gene_go$go_term), ]
-gene_go <- gene_go[!grepl("receptor localization to synapse", gene_go$go_term), ]
+gene_go <- gene_go[!grepl("prostatic", gene_go$go_term), ]
+gene_go <- gene_go[!grepl("presynapse", gene_go$go_term), ]
+gene_go <- gene_go[!grepl("postsynapse", gene_go$go_term), ]
+gene_go <- gene_go[!grepl("sympathetic", gene_go$go_term), ]
+gene_go <- gene_go[!grepl("neuron projection extension involved in neuron projection guidance", gene_go$go_term), ]
+
+gene_go <- gene_go %>%
+  filter(!(go_term == "regulation of peptidase activity" & !(gene %in% c(
+  "Lgals3", "Thbs2", "Postn", "Cbln1", "Srpx2", "Hapln1", "Lgi2", "Plxna4", "Plxnb1",
+  "Serpina3n", "Thbs1", "Lgals9", "Lama5", "Fn1", "Lamb2", "Hspg2", "Tgm2", "Dcn", "Cxcl12", "S100a9"
+))))
 
 signaling_pathways <- list(
   `TGF-B Signaling` = c(
@@ -715,13 +708,23 @@ signaling_pathways <- list(
                       "regulation of Rho protein signal transduction"), 
   `SMAD Signaling` = c("SMAD protein signal transduction",
                       "regulation of SMAD protein signal transduction", 
-                      "negative regulation of SMAD protein signal transduction"),
+                      "negative regulation of SMAD protein signal transduction", 
+                      "positive regulation of SMAD protein signal transduction"),
   `STAT Signaling` = "cell surface receptor signaling pathway via STAT",
   `BMP Signaling` = c("negative regulation of BMP signaling pathway",
                       "regulation of BMP signaling pathway", 
                       "BMP signaling pathway", "response to BMP", "cellular response to BMP stimulus"),
   `TLR Signaling` = c("toll-like receptor signaling pathway",
-                      "regulation of toll-like receptor signaling pathway"))
+                      "regulation of toll-like receptor signaling pathway"),
+  `TNF Signaling` = c(
+    "positive regulation of tumor necrosis factor production",
+    "positive regulation of tumor necrosis factor superfamily cytokine production",
+    "regulation of tumor necrosis factor production",
+    "	
+regulation of tumor necrosis factor superfamily cytokine production", 
+"tumor necrosis factor production", 
+"tumor necrosis factor superfamily cytokine production"
+  ))
 
 # Categories
 gene_go <- gene_go %>%
@@ -738,6 +741,7 @@ gene_go <- gene_go %>%
       go_term %in% signaling_pathways$`STAT Signaling` ~ "STAT Signaling",
       go_term %in% signaling_pathways$`BMP Signaling` ~ "BMP Signaling",
       go_term %in% signaling_pathways$`TLR Signaling` ~ "TLR Signaling",
+      go_term %in% signaling_pathways$`TNF Signaling` ~ "TNF Signaling",
       TRUE ~ go_term  
     )
   ) %>%
@@ -842,66 +846,6 @@ col_fun3_ <- colorRamp2(c(min(matrix_pval_signaling), max(matrix_pval_signaling)
 Plots
 
 ```{r}
-gene_regulation_status <- gene_regulation_status[colnames(matrix_binary_signaling)]
-
-regulation_colors <- c("Up" = "red", "Down" = "blue")
-
-column_annotation <- HeatmapAnnotation(
-    "Regulation"= anno_simple(
-        gene_regulation_status, 
-        col = regulation_colors,
-        gp = gpar(col = "white", lwd = 1.5)),
-    annotation_name_side = "left",
-    annotation_name_gp = gpar(fontsize = 9))
-
-
-hm_binary_signaling <- Heatmap(matrix_binary_signaling,
-                               name = "Status",
-                               col = col_fun_,
-                               rect_gp = gpar(col = "white", lwd = 2),
-                               clustering_method_columns = "ward.D2",
-                               clustering_distance_columns = "euclidean",
-                               cluster_rows = FALSE,
-                               show_row_dend = FALSE,
-                               show_column_dend = FALSE,
-                               row_names_gp = gpar(fontsize = 9),
-                               row_names_side = "left",
-                               column_names_rot = 90,
-                               column_names_gp = gpar(fontsize = 9),
-                               heatmap_legend_param = list(title = "Status", at = c(0, 1),
-                                                           labels = c("Absent", "Present")),
-                               column_title = " ",
-                               column_title_gp = gpar(fontsize = 12),
-                               bottom_annotation = column_annotation)
-
-# Heatmap for signaling terms - Count
-hm_count_signaling <- Heatmap(matrix_counts_signaling,
-                              rect_gp = gpar(col = "white", lwd = 2),
-                              name = "Count",
-                              col = col_fun2_,
-                              cluster_rows = FALSE,
-                              cluster_columns = FALSE,
-                              show_row_names = FALSE,
-                              width = unit(1, "cm"),
-                              column_title = " ",
-                              column_names_rot = 90,
-                              column_names_gp = gpar(fontsize = 8),
-                              column_title_gp = gpar(fontsize = 8))
-
-# Heatmap for signaling terms - P-value
-hm_pval_signaling <- Heatmap(matrix_pval_signaling,
-                             rect_gp = gpar(col = "white", lwd = 2),
-                             name = "-log10 P-value",
-                             col = col_fun3_,
-                             cluster_rows = FALSE,
-                             cluster_columns = FALSE,
-                             show_row_names = FALSE,
-                             width = unit(1, "cm"),
-                             column_title = " ",
-                             column_names_rot = 90,
-                             column_names_gp = gpar(fontsize = 8),
-                             column_title_gp = gpar(fontsize = 8))
-
 gene_regulation_status2 <- gene_regulation_status[colnames(matrix_binary_non_signaling)]
 
 regulation_colors <- c("Up" = "red", "Down" = "blue")
@@ -969,6 +913,67 @@ regulation_legend <- Legend(
   labels = c("Upregulated", "Downregulated"),
   legend_gp = gpar(fill = c("Up" = "red", "Down" = "blue"))
 )
+
+gene_regulation_status <- gene_regulation_status[colnames(matrix_binary_signaling)]
+
+regulation_colors <- c("Up" = "red", "Down" = "blue")
+
+column_annotation <- HeatmapAnnotation(
+    "Regulation"= anno_simple(
+        gene_regulation_status, 
+        col = regulation_colors,
+        gp = gpar(col = "white", lwd = 1.5)),
+    annotation_name_side = "left",
+    annotation_name_gp = gpar(fontsize = 9))
+
+
+hm_binary_signaling <- Heatmap(matrix_binary_signaling,
+                               name = "Status",
+                               col = col_fun_,
+                               rect_gp = gpar(col = "white", lwd = 2),
+                               clustering_method_columns = "ward.D2",
+                               clustering_distance_columns = "euclidean",
+                               cluster_rows = FALSE,
+                               show_row_dend = FALSE,
+                               show_column_dend = FALSE,
+                               row_names_gp = gpar(fontsize = 9),
+                               row_names_side = "left",
+                               column_names_rot = 90,
+                               column_names_gp = gpar(fontsize = 9),
+                               heatmap_legend_param = list(title = "Status", at = c(0, 1),
+                                                           labels = c("Absent", "Present")),
+                               column_title = " ",
+                               column_title_gp = gpar(fontsize = 12),
+                               bottom_annotation = column_annotation)
+
+# Heatmap for signaling terms - Count
+hm_count_signaling <- Heatmap(matrix_counts_signaling,
+                              rect_gp = gpar(col = "white", lwd = 2),
+                              name = "Count",
+                              col = col_fun2_,
+                              cluster_rows = FALSE,
+                              cluster_columns = FALSE,
+                              show_row_names = FALSE,
+                              width = unit(1, "cm"),
+                              column_title = " ",
+                              column_names_rot = 90,
+                              column_names_gp = gpar(fontsize = 8),
+                              column_title_gp = gpar(fontsize = 8))
+
+# Heatmap for signaling terms - P-value
+hm_pval_signaling <- Heatmap(matrix_pval_signaling,
+                             rect_gp = gpar(col = "white", lwd = 2),
+                             name = "-log10 P-value",
+                             col = col_fun3_,
+                             cluster_rows = FALSE,
+                             cluster_columns = FALSE,
+                             show_row_names = FALSE,
+                             width = unit(1, "cm"),
+                             column_title = " ",
+                             column_names_rot = 90,
+                             column_names_gp = gpar(fontsize = 8),
+                             column_title_gp = gpar(fontsize = 8))
+
 draw(hm_binary_non_signaling + hm_count_non_signaling + hm_pval_non_signaling, annotation_legend_list = list(regulation_legend))
 draw(hm_binary_signaling + hm_count_signaling + hm_pval_signaling, annotation_legend_list = list(regulation_legend))
 
@@ -983,6 +988,7 @@ draw(hm_binary_non_signaling + hm_count_non_signaling + hm_pval_non_signaling, a
 dev.off()
 
 genes_subchronic <- unique(c(colnames(matrix_binary_non_signaling), colnames(matrix_binary_signaling)))
+saveRDS(genes_subchronic, file = "~/R/Downloads/Genes_Subchronic.rds")
 
 genes_filtered <- unique(c(genes_subchronic, genes_acute))
 saveRDS(genes_filtered, file = "~/R/Downloads/Genes_Filtered.rds")
