--- a/1. Meta-analysis.Rmd
+++ b/1. Meta-analysis.Rmd
@@ -22,13 +22,9 @@ library(stringr)
 library(glmGamPoi)
 library(readxl)
 library(EnhancedVolcano)
-library(BiocParallel)
 library(speckle)
 library(presto)
-library(enrichplot)
-library(clusterProfiler)
 library(MAST)
-library(plotly)
 library(openxlsx)
 library(patchwork)
 library(tibble)
@@ -48,182 +44,288 @@ Idents(seurat4) <- "time"
 Idents(seurat5) <- "time"
 ```
 
-Normalization
-
 ```{r}
-# Normalization of 3 datasets
 seurat_list <- list(seurat, seurat2, seurat3, seurat4, seurat5)
-seurat_list_norm <- list()
-
-for (i in seq_along(seurat_list)) {
-  seurat_norm_i <- NormalizeData(seurat_list[[i]], normalization.method = "LogNormalize", verbose = TRUE)
-  seurat_norm_i <- FindVariableFeatures(seurat_norm_i, selection.method = "vst", nfeatures = 5000, verbose = TRUE)
-  seurat_list_norm[[i]] <- seurat_norm_i
-  rm(seurat_norm_i)}
-
-rm(seurat_list, seurat, seurat2, seurat3, seurat4, seurat5)
 ```
 
-Transfer cell type annotations
-
-FindTransferAnchors, TransferData and AddMetadata are used to update the seurat objects with the new predicted annotations based on reference annotations provided by Seurat from Skinnider 2024.
-
-```{r}
-
-# Cell Annotation 
-seurat_list_annotated <- lapply(seq_along(seurat_list_norm), function(i) {
-  seurat_norm <- seurat_list_norm[[i]]
-  
-  if (i == 3) {
-    return(seurat_norm)}
-  
-  anchors <- FindTransferAnchors(reference = seurat_list_norm [[3]], query = seurat_norm, dims = 1:20)
-  predictions <- TransferData(anchorset = anchors, refdata = seurat_list_norm [[3]]$celltype, dims = 1:20)
-  seurat_norm <- AddMetaData(seurat_norm, metadata = predictions)
-  
-  return(seurat_norm)
-})
-
-rm(seurat_list_norm)
-```
-
-Scale, RunPCA, Run UMAP
-
-```{r}
-
-features <- SelectIntegrationFeatures(
-  object.list = seurat_list_annotated, 
-  nfeatures = 3500)
-
-seurat_list <- lapply(X = seurat_list_annotated, FUN = function(x) {x <- ScaleData(x, features =  features)
-x <- RunPCA(x, features = features, npcs = 30)
-x <- RunUMAP(x, dims = 1:20)})
-
-seurat_norm <- seurat_list[[1]]
-seurat2_norm <- seurat_list[[2]]
-seurat3_norm <- seurat_list[[3]]
-seurat4_norm <- seurat_list[[4]]
-seurat5_norm <- seurat_list[[5]]
-
-rm(seurat_list_annotated)
-```
-
-UMAP of the 3 datasets before integration
+UMAP before CCA integration, only merge 
 
 ```{r}
 combined_seurat <- merge(
-  x = seurat_norm,
-  y = list(seurat2_norm, seurat3_norm, seurat4_norm, seurat5_norm), project = "MergedProject")
+  x = seurat_list[[1]],
+  y = list(seurat_list[[2]], seurat_list[[3]], seurat_list[[4]], seurat_list[[5]]), project = "MergedProject")
 
+# Pre-process RNA assay to see clustering before integration
+DefaultAssay(combined_seurat) <- "RNA"
+
+combined_seurat <- JoinLayers(combined_seurat)
 combined_seurat <- NormalizeData(combined_seurat)
+combined_seurat <- FindVariableFeatures(combined_seurat)
+gc()
 combined_seurat <- ScaleData(combined_seurat)
-combined_seurat <- RunPCA(combined_seurat)
-combined_seurat <- RunUMAP(combined_seurat, dims = 1:20)
+gc()
+combined_seurat <- RunPCA(combined_seurat, dims = 1:30)
+gc()
+combined_seurat <- RunUMAP(combined_seurat, dims = 1:30)
 
-umap_meta <- DimPlot(combined_seurat, group.by = "dataset") + theme(axis.text.x = element_text(angle = 60, hjust = 1, size = 7), legend.title = element_text(size = 16), legend.text = element_text(size = 16)) + labs(title = "UMAP Before Integration", x = "UMAP 1", y = "UMAP 2")
+umap_meta <- DimPlot(combined_seurat, group.by = "dataset") + theme(axis.text.x = element_text(angle = 60, hjust = 1, size = 7), legend.title = element_text(size = 20), legend.text = element_text(size = 16)) + labs(title = "Pre-integration UMAP clustering by dataset", x = "UMAP 1", y = "UMAP 2")
 
-ggsave("~/R/Figures2/UMAP_BeforeIntegration_MetaAnalysis.png", umap_meta, dpi = 1080, height = 8, width = 9)
+ggsave("~/R/Figures2/UMAP_BeforeIntegration_MetaAnalysis2.png", umap_meta, dpi = 1080, height = 8, width = 9)
 
 rm(seurat2_norm, seurat_norm, seurat3_norm, seurat4_norm, seurat5_norm)
-#rm(combined_seurat)
+
 ```
 
-Integrate the three datasets and scale the integrated seurat object.
+Integration
 
 ```{r}
-ecm <- read_excel("~/R/Data/MAIN_ECM_Proteome.xlsx")
-genes_of_interest <- ecm$Gene
 
-features <- c(features, genes_of_interest)
+for (i in seq_along(seurat_list)) {
+  seurat_list[[i]] <- NormalizeData(seurat_list[[i]], normalization.method = "LogNormalize")
+  seurat_list[[i]] <- FindVariableFeatures(seurat_list[[i]], selection.method = "vst", nfeatures = 3000)
+}
 
-features <- unique(features)
+features <- SelectIntegrationFeatures(
+  object.list = seurat_list,
+  nfeatures = 3000)
 
-features <- intersect(features, rownames(seurat_list[[1]]))
-features <- intersect(features, rownames(seurat_list[[2]])) 
-features <- intersect(features, rownames(seurat_list[[3]]))
-features <- intersect(features, rownames(seurat_list[[4]]))
-features <- intersect(features, rownames(seurat_list[[5]]))
+for (i in seq_along(seurat_list)) {
+  seurat_list[[i]] <- ScaleData(seurat_list[[i]], features = features)
+  seurat_list[[i]] <- RunPCA(seurat_list[[i]], features = features)
+  seurat_list[[i]] <- RunUMAP(seurat_list[[i]], features = features)
+}
 
 gc()
-anchors_integration <- FindIntegrationAnchors(object.list = seurat_list, dims = 1:30, verbose = TRUE, reduction = "cca", anchor.features = features, scale = F, normalization.method = "LogNormalize", k.anchor = 25, k.score = 30, k.filter = 150)
+anchors_integration <- FindIntegrationAnchors(object.list = seurat_list, dims = 1:30, verbose = TRUE, reduction = "cca", anchor.features = features, scale = F, normalization.method = "LogNormalize", k.anchor = 10)
 
 rm(seurat_list)
 
-save.image(file = "~/R/Downloads/AllData_Anchors.RData")
+save.image(file = "~/R/Downloads/AllData_Anchors2.RData")
+```
 
-load(file = "~/R/Downloads/AllData_Anchors.RData")
+Integration 
+
+```{r}
+load(file = "~/R/Downloads/AllData_Anchors2.RData")
 gc()
 seurat_integrated <- IntegrateData(anchorset = anchors_integration, dims = 1:30, verbose = TRUE, normalization.method = "LogNormalize") 
 
 rm(seurat_list, anchors, anchors_integration)
 
-save.image(file = "~/R/Downloads/AllData_CCA.RData")
+save.image(file = "~/R/Downloads/AllData_CCA2.RData")
 ```
+
+Load integrated dataset
 
 ```{r}
-load(file = "~/R/Downloads/AllData_CCA.RData")
+load(file = "~/R/Downloads/AllData_CCA2.RData")
+gc()
 ```
 
-* Correct metadata issues
+Check integration
+
+```{r}
+# Check Integration
+gc()
+seurat_integrated <- ScaleData(seurat_integrated)
+gc()
+seurat_integrated <- RunPCA(seurat_integrated, verbose = T, dims = 1:30) 
+gc()
+seurat_integrated <- RunUMAP(seurat_integrated, dims = 1:30)
+
+
+datasets <- DimPlot(seurat_integrated, group.by = "dataset", label = F) + labs(title = "Post-integration UMAP clustering by dataset", x = "UMAP 1", y = "UMAP 2") + theme(
+  legend.title = element_text(size = 16),
+  legend.text = element_text(size = 16)
+)
+
+datasets
+
+ggsave("~/R/Figures2/Datasets_MetaAnalysis.png", datasets, dpi = 1080, height = 8, width = 9)
+```
+
+
+Cell type annotation - Transfer Learning
+
+```{r}
+seurat_integrated@meta.data <- seurat_integrated@meta.data %>%
+  dplyr::select(-starts_with("pred"))
+
+# Subset the integrated object into reference (Skinnider_2024) and query (all others)
+reference <- subset(seurat_integrated, subset = dataset == "Skinnider_2024")
+query <- subset(seurat_integrated, subset = dataset != "Skinnider_2024")
+
+# Find anchors and transfer labels from reference to query
+anchors <- FindTransferAnchors(reference = reference, query = query, dims = 1:30)
+predictions <- TransferData(anchorset = anchors, refdata = reference$celltype, dims = 1:30)
+query <- AddMetaData(query, metadata = predictions)
+query$predicted_celltype <- predictions$predicted.id
+
+# Filter by prediction score
+nrow(query@meta.data)
+table(query$prediction.score.max > 0.9)
+query <- subset(query, subset = prediction.score.max > 0.9)
+
+# Create a new metadata column in the full object
+seurat_integrated$predicted_celltype <- NA
+
+# Assign original cell types for Skinnider_2024 cells
+seurat_integrated$predicted_celltype[Cells(reference)] <- reference$celltype
+
+# Assign predicted cell types for the rest
+seurat_integrated$predicted_celltype[Cells(query)] <- query$predicted_celltype
+
+# Delete NAs in celltype
+rm(query, reference)
+cells_to_keep <- rownames(seurat_integrated@meta.data)[!is.na(seurat_integrated@meta.data$predicted_celltype)]
+seurat_integrated <- subset(seurat_integrated, cells = cells_to_keep)
+ # No celltype label - because no prediction.score > 0.9
+
+# Dictionary
+mapping <- list(
+  "Astrocyte" = "Astrocytes",
+  "Astrocytes" = "Astrocytes",
+  "B cells" = c("B cells", "Myeloid, dividing"),
+  "Dendritic" = c("Peripheral immune cells", "B cells", "NK, T cells"),
+  "Div-Myeloid" = "Myeloid, dividing",
+  "Dorsal" = "Dorsal",
+  "Endothelial" = "Vascular endothelial cells",
+  "Endothelial cells" = "Vascular endothelial cells",
+  "Ependymal" = "Ependymal cells",
+  "Ependymal cells" = "Ependymal cells",
+  "Fibroblast" = "Vascular cells",
+  "Leptomeninges" = "Vascular cells",
+  "Lymphocyte" = c("Peripheral immune cells", "B cells", "NK, T cells", "Myeloid, dividing"),
+  "Macrophage" = c("Peripheral immune cells", "Myeloid, dividing"),
+  "Mature oligodendrocytes (MOL)" = "Mature oligodendrocytes (MOL)",
+  "Microglia" = "Microglia",
+  "Microglia/Hematopoietic" = c("Microglia","Peripheral immune cells", "Myeloid, dividing"),
+  "Monocyte" = c("Peripheral immune cells", "Myeloid, dividing"),
+  "Myelin forming oligodendrocytes (MFOL)" = "Myelin forming oligodendrocytes (MFOL)",
+  "Myeloid, dividing" = "Myeloid, dividing",
+  "Neuron" = c("Dorsal", "Ventral"),
+  "Neurons" = c("Dorsal", "Ventral"),
+  "Neutrophil" = c("Peripheral immune cells", "Myeloid, dividing"),
+  "Newly formed oligodendrocytes (NFOL)" = "Newly formed oligodendrocytes (NFOL)",
+  "NK, T cells" = c("Peripheral immune cells", "NK, T cells", "Myeloid, dividing"),
+  "Oligodendrocyte" = c("Newly formed oligodendrocytes (NFOL)", "Mature oligodendrocytes (MOL)", "Myelin forming oligodendrocytes (MFOL)"),
+  "Oligodendrocytes" = c("Newly formed oligodendrocytes (NFOL)", "Mature oligodendrocytes (MOL)", "Myelin forming oligodendrocytes (MFOL)"),
+  "Oligodendrocyte Progenitors/Precursors" = "Oligodendrocytes precursor cells (OPC)",
+  "Oligodendrocytes precursor cells (OPC)" = "Oligodendrocytes precursor cells (OPC)",
+  "OPC" = "Oligodendrocytes precursor cells (OPC)",
+  "OPCs" = "Oligodendrocytes precursor cells (OPC)",
+  "Pericyte" = "Vascular cells",
+  "Pericytes" = "Vascular cells",
+  "Peripheral immune cells" = c("Peripheral immune cells","Myeloid, dividing"),
+  "Vascular cells" = "Vascular cells",
+  "Vascular endothelial cells" = "Vascular endothelial cells",
+  "Ventral" = "Ventral"
+)
+
+# Matches
+check_manual_match <- function(original, predicted) {
+  original <- as.character(original)
+  predicted <- as.character(predicted)
+  
+  if (!original %in% names(mapping)) {
+    return(FALSE)
+  }
+  
+  valid_matches <- mapping[[original]]
+  if (length(valid_matches) == 0) {
+    return(FALSE)
+  }
+  
+  return(predicted %in% valid_matches)
+}
+
+metadata <- seurat_integrated@meta.data
+metadata$is_match <- apply(metadata, 1, function(row) {
+  check_manual_match(row["celltype"], row["predicted_celltype"])
+})
+
+# Accuray of the annotation
+accuracy <- mean(metadata$is_match, na.rm = TRUE)
+accuracy
+
+# Filter cells bad annotated
+discrepancies <- metadata[!metadata$is_match, c("celltype", "predicted_celltype")]
+cells_to_remove <- rownames(discrepancies)
+seurat_integrated <- seurat_integrated[, !colnames(seurat_integrated) %in% cells_to_remove]
+
+# UMAP Plot for cell types
+
+celltype <- DimPlot(seurat_integrated, group.by = "predicted_celltype", label = T, label.size = 5.5, repel = T) + labs(x = "UMAP 1", y = "UMAP 2", caption = "Cells with prediction score > 0.9
+                                                                                          Transfer learning accuracy = 97.22%") +
+ggtitle("                                      Cell type annotation after transfer learning approach") +
+  theme(plot.title = element_text(hjust = 0.5, size = 18),
+  legend.text = element_text(size = 14)
+)
+celltype
+
+ggsave("~/R/Figures2/Cells_MetaAnalysis.png", celltype, dpi = 1080, height = 9, width = 13)
+
+```
+
+* METADATA *
 
 ```{r}
 
 metadata <- seurat_integrated@meta.data
-metadata <- metadata %>% select(matches("nCount_RNA|nFeature_RNA|time|celltype|technology|dataset|predicted.id"))
+metadata <- metadata %>% select(matches("nCount_RNA|nFeature_RNA|time|celltype|technology|dataset|predicted_celltype"))
 
 metadata$time[metadata$time == "Sub-Acute"] <- "21 dpi"
 metadata$time[metadata$time == "Sub-Chronic"] <- "4-6 wpi"
 
-metadata$predicted.id[metadata$dataset == "Skinnider_2024"] <- metadata$celltype[metadata$dataset == "Skinnider_2024"]
-
-# Return check metadata into seurat object
-seurat_integrated@meta.data <- metadata
-
-# Issues with Microglia Annotation
-if ("predicted.id" %in% colnames(metadata)) {
-  if ("celltype" %in% colnames(metadata)) {
-    metadata$celltype <- dplyr::case_when(
-      metadata$celltype == "Microglia" ~ "Microglia",
-      metadata$celltype == "Lymphocyte" ~ "Immune cells",
-      metadata$celltype == "Macrophage" ~ "Immune cells",
-      metadata$celltype == "Neutrophil" ~ "Immune cells",
-      metadata$celltype == "Monocyte" ~ "Immune cells",
-      metadata$celltype == "Ependymal" ~ "Ependymal cells",
-      metadata$celltype == "Div-Myeloid" ~ "Immune cells",
-      metadata$celltype == "Dendritic" ~ "Immune cells",
-      metadata$celltype == "B cells" ~ "Immune cells",
-      metadata$celltype == "OPCs" ~ "Oligodendrocytes precursor cells (OPC)",
-      metadata$celltype == "OPC" ~ "Oligodendrocytes precursor cells (OPC)",
-      metadata$celltype == "Oligodendrocyte Progenitors/Precursors" ~ "Oligodendrocytes precursor cells (OPC)",
-      metadata$celltype == "Astrocyte" ~ "Astrocytes",
-      metadata$celltype == "Astrocytes" ~ "Astrocytes",
-      metadata$celltype == "Neuron" ~ "Neurons",
-      metadata$celltype == "Neurons" ~ "Neurons",
-      metadata$celltype == "Ventral" ~ "Neurons",
-      metadata$celltype == "Dorsal" ~ "Neurons",
-      TRUE ~ metadata$predicted.id
-    )
-  } else {
-    metadata$celltype <- metadata$predicted.id
-  }
-  metadata$predicted.id <- NULL
-}
+metadata$celltype <- metadata$predicted_celltype
 
 # Return check metadata into seurat object
 seurat_integrated@meta.data <- metadata
 
 Idents(seurat_integrated) <- "time"
 
-rm(metadata)
-```
-
-
-```{r}
 # Descriptive
 table(seurat_integrated$celltype)
 table(seurat_integrated$time)
 table(seurat_integrated$dataset)
-``` 
+
+# We have a few number of cells within some cell types like B cells
+# We lose specificity but we win reliability
+# The vast majority of discrepancies are between near clusters: Highlight ! peripherial immune cells - microglia, oligodendrocytes - OPCs 
+
+seurat_integrated@meta.data <- seurat_integrated@meta.data %>%
+  mutate(celltype_grouped = case_when(
+    celltype %in% c("Mature oligodendrocytes (MOL)", "Myelin forming oligodendrocytes (MFOL)") ~ "Oligodendrocytes",
+    celltype %in% "Newly formed oligodendrocytes (NFOL)" ~ "Newly formed oligodendrocytes",
+    celltype == "Oligodendrocytes precursor cells (OPC)" ~ "OPCs",
+    celltype == "Astrocytes" ~ "Astrocytes",
+    celltype == "Ependymal cells" ~ "Ependymal cells",
+    celltype == "Microglia" ~ "Microglia",
+    celltype %in% c("B cells", "NK, T cells", "Peripheral immune cells") ~ "Immune cells",
+     celltype %in% "Myeloid, dividing" ~ "Myeloid",
+    celltype %in% "Vascular endothelial cells" ~ "Endothelial cells",
+    celltype %in% "Vascular cells" ~ "Vascular cells",
+    celltype %in% c("Ventral", "Dorsal") ~ "Neurons",
+    TRUE ~ "Other"
+  ))
+
+seurat_integrated@meta.data$celltype <- seurat_integrated@meta.data$celltype_grouped
+
+table(seurat_integrated@meta.data$celltype, seurat_integrated@meta.data$dataset)
+
+```
+
+UMAP Cells Grouped
+
+```{r}
+
+celltype <- DimPlot(seurat_integrated, group.by = "celltype", label = T, label.size = 5.5, repel = T) + labs(title = "                              Final cell type annotation ", x = "UMAP 1", y = "UMAP 2") + theme(plot.title = element_text(hjust = 0.5, size = 18), legend.text = element_text(size = 14)
+)
+celltype
+
+ggsave("~/R/Figures2/CellsGrouped_MetaAnalysis.png", celltype, dpi = 1080, height = 9, width = 13)
+
+```
 
 Cell Cycle Score
 
@@ -254,129 +356,48 @@ seurat_integrated@meta.data %>%
     G2M_max    = max(G2M.Score, na.rm = TRUE)
   )
 
+seurat_integrated <- subset(seurat_integrated, subset = Phase != "Undecided")
 
-```
-
-UMAP after integration
-
-```{r}
-seurat_integrated <- ScaleData(seurat_integrated)
-seurat_integrated <- RunPCA(seurat_integrated, verbose = T, dims = 1:20) 
-seurat_integrated <- RunUMAP(seurat_integrated, dims = 1:20)
-
-
-celltype <- DimPlot(seurat_integrated, group.by = "celltype", label = F) + labs(title = "Cell Type Annotated", x = "UMAP 1", y = "UMAP 2") + theme(
-  legend.title = element_text(size = 16),
-  legend.text = element_text(size = 16)
-)
-celltype
-
-ggsave("~/R/Figures2/Cells_MetaAnalysis.png", celltype, dpi = 1080, height = 8, width = 11)
-
-```
-
-Possible covariates
-
-```{r}
 cc_score <- DimPlot(seurat_integrated,
-        reduction = "pca",
-        group.by= "Phase") + labs(title = "Cell Cycle Score Assessment", x = "PCA 1", y = "PCA 2") + theme(
+        reduction = "umap",
+        group.by= "Phase", split.by = "Phase") + labs(title = "Cell Cycle Score Assessment", x = "PCA 1", y = "PCA 2") + theme(
   legend.title = element_text(size = 16),
   legend.text = element_text(size = 16)
 )
 cc_score
-ggsave("~/R/Figures2/CellCycleScore.png", cc_score, dpi = 1080, height = 8, width = 9)
 
-seurat_integrated <- ScaleData(seurat_integrated, vars.to.regress = c("nCount_RNA", "S.Score", "G2M.Score"))
-
-# Differences between CC phases: Yes/No?
-
-umap_dataset <- DimPlot(seurat_integrated,
+cc_score2 <- DimPlot(seurat_integrated,
         reduction = "umap",
-        group.by= "dataset")+ theme(axis.text.x = element_text(angle = 60, hjust = 1, size = 7),
+        group.by= "Phase") + labs(title = "Cell Cycle Score Assessment", x = "PCA 1", y = "PCA 2") + theme(
   legend.title = element_text(size = 16),
-  legend.text = element_text(size = 16)) + labs(title = "UMAP Plot After Integration", x = "UMAP 1", y = "UMAP 2")
-umap_dataset
-
-ggsave("~/R/Figures2/UMAP_AfterIntegration_MetaAnalysis.png", umap_dataset, dpi = 1080, height = 8, width = 9)
-```
-
-
-```{r}
-
-seurat_integrated@meta.data <- seurat_integrated@meta.data %>%
-  mutate(celltype_grouped = case_when(
-    celltype %in% c("Mature oligodendrocytes (MOL)", "Myelin forming oligodendrocytes (MFOL)", "Newly formed oligodendrocytes (NFOL)") ~ "Oligodendrocytes",
-    celltype == "Oligodendrocytes precursor cells (OPC)" ~ "OPCs",
-    celltype == "Astrocytes" ~ "Astrocytes",
-    celltype == "Ependymal cells" ~ "Ependymal cells",
-    celltype == "Microglia" ~ "Microglia",
-    celltype %in% c("B cells", "NK, T cells","Immune cells", "Myeloid, dividing", "Peripheral immune cells") ~ "Immune cells",
-    celltype %in% "Vascular endothelial cells" ~ "Endothelial cells",
-    celltype %in% "Vascular cells" ~ "Vascular cells",
-    celltype %in% c("Neurons", "Ventral", "Dorsal") ~ "Neurons",
-    TRUE ~ "Other"
-  ))
-
-seurat_integrated@meta.data$celltype <- seurat_integrated@meta.data$celltype_grouped
-
-table(seurat_integrated@meta.data$celltype)
-```
-
-```{r}
-celltype <- DimPlot(seurat_integrated, group.by = "celltype", label = F) + labs(title = "Cell Type Annotated", x = "UMAP 1", y = "UMAP 2") + theme(legend.title = element_text(size = 16), legend.text = element_text(size = 16))
-celltype
-
-ggsave("~/R/Figures2/Cells2_MetaAnalysis.png", celltype, dpi = 1080, height = 8, width = 11)
-```
-LISI
-
-```{r}
-library(lisi)
-
-embeddings <- Embeddings(seurat_integrated, reduction = "umap") 
-
-metadata <- seurat_integrated@meta.data
-batch_labels <- metadata$dataset  
-celltype_labels <- metadata$celltype
-
-lisi_scores <- lisi::compute_lisi(X = embeddings, meta_data = data.frame(batch = seurat_integrated$dataset, celltype = seurat_integrated$celltype), label_colnames = c("batch", "celltype"), perplexity = 100)
-
-lisi_df <- data.frame(
-  Batch_LISI = lisi_scores$batch,
-  CellType_LISI = lisi_scores$celltype)
-
-batch_plot <- ggplot(lisi_df, aes(x = Batch_LISI)) +
-  geom_density(fill = "salmon", alpha = 0.7) +
-  geom_vline(xintercept = 1, linetype = "dashed", color = "red") +
-  labs(title = "LISI - Batch (Dataset)",
-       x = "LISI Score",
-       y = "Density") +
-  theme_minimal() +
-  xlim(c(1, max(lisi_df$Batch_LISI)))
-
-celltype_plot <- ggplot(lisi_df, aes(x = CellType_LISI)) +
-  geom_density(fill = "steelblue", alpha = 0.7) +
-  labs(title = "LISI - Cell Type",
-       x = "LISI Score",
-       y = "Density") +
-  theme_minimal() +
-  xlim(c(1, max(lisi_df$CellType_LISI)))
-
-combined_plot <- batch_plot + celltype_plot
-
-print(combined_plot)
-
-ggsave("~/R/Figures2/LISI_Scores.png", combined_plot, dpi = 1080, width = 14, height = 8)
-
-summary_stats <- data.frame(
-  Metric = c("Batch LISI", "CellType LISI"),
-  Mean = c(mean(lisi_df$Batch_LISI), mean(lisi_df$CellType_LISI)),
-  Median = c(median(lisi_df$Batch_LISI), median(lisi_df$CellType_LISI)),
-  SD = c(sd(lisi_df$Batch_LISI), sd(lisi_df$CellType_LISI))
+  legend.text = element_text(size = 16)
 )
+cc_score2
 
-print(summary_stats)
+library(patchwork)
+
+cc <- cc_score2 + cc_score
+cc
+
+ggsave("~/R/Figures2/CellCycleScore2.png", cc, dpi = 1080, height = 8, width = 16)
+
+table(seurat_integrated@meta.data$Phase)
+
+# It is normal that dividing oligodendrocytes have more G2M genes expressed, the other cell types are well mixed
+```
+
+```{r}
+table(seurat_integrated$celltype, seurat_integrated$dataset)
+```
+
+*Differential expression analysis* -> RNA assay: no integrated
+
+```{r}
+# Pre-process RNA assay to see clustering before integration
+DefaultAssay(seurat_integrated) <- "RNA"
+
+seurat_integrated <- JoinLayers(seurat_integrated)
+seurat_integrated <- NormalizeData(seurat_integrated)
 
 ```
 
@@ -395,83 +416,60 @@ saveRDS(seurat_integrated_ME, "~/R/Downloads/Seurat_Integrated_ME.rds")
 
 ```
 
-Differential expression analysis.
-
 FindMarkers analysis
 
 ```{r}
 
 Idents(seurat_integrated_ME) <- "time"
 
-DEG <- FindMarkers(seurat_integrated_ME,  ident.1 = "7dpi", ident.2 = "Uninjured", logfc.threshold = 0, min.pct = 0.05, test.use = "MAST", layer = "data", latent.vars = c("nCount_RNA", "S.Score", "G2M.Score"))
+DEG <- FindMarkers(seurat_integrated_ME,  ident.1 = "7dpi", ident.2 = "Uninjured", logfc.threshold = 0, min.pct = 0.05, test.use = "MAST", layer = "data", latent.vars = c("dataset", "nCount_RNA"))
 
 DEG$Gene <- rownames(DEG)
-
 DEG$p_val_adj <- ifelse(DEG$p_val_adj == 0, 1e-305, DEG$p_val_adj)
-
 DEG$Time <- "7 dpi"
-
-volcanoplot <- EnhancedVolcano(DEG, lab = rownames(DEG), x = "avg_log2FC", y = "p_val_adj", pCutoff = 0.05, FCcutoff = 0.75, title = "Differential expression between Uninjured and Acute conditions", drawConnectors = T, labSize = 3)
 
 write.xlsx(DEG, "~/R/Downloads/DEG_Acute.xlsx")
 
-ggsave("~/R/Figures/Volcano_Acute.png", volcanoplot, dpi = 1080, height = 7, width = 9)
+########################################################################################################
 
-##############################################################################################################
-
-DEG2 <- FindMarkers(seurat_integrated_ME,  ident.1 = "1dpi", ident.2 = "Uninjured", logfc.threshold = 0, min.pct = 0.05, test.use = "MAST", layer = "data", latent.vars = c("nCount_RNA", "S.Score", "G2M.Score"))
+DEG2 <- FindMarkers(seurat_integrated_ME,  ident.1 = "1dpi", ident.2 = "Uninjured", logfc.threshold = 0, min.pct = 0.05, test.use = "MAST", layer = "data", latent.vars = c("dataset", "nCount_RNA"))
 
 DEG2$Gene <- rownames(DEG2)
-
 DEG2$p_val_adj <- ifelse(DEG2$p_val_adj == 0, 1e-305, DEG2$p_val_adj)
-
 DEG2$Time <- "1 dpi"
-
-volcanoplot2 <- EnhancedVolcano(DEG2, lab = rownames(DEG2), x = "avg_log2FC", y = "p_val_adj", pCutoff = 0.05, FCcutoff = 0.75, title = "Differential expression between Uninjured and Acute conditions", drawConnectors = T, labSize = 3)
-
-ggsave("~/R/Figures/Volcano_1dpi.png", volcanoplot2, dpi = 1080, height = 7, width = 9)
 
 write.xlsx(DEG2, "~/R/Downloads/DEG_FirstDay.xlsx")
 
 ##############################################################################################################
 
-DEG3 <- FindMarkers(seurat_integrated_ME,  ident.1 = "4-6 wpi", ident.2 = "Uninjured", logfc.threshold = 0, min.pct = 0.05, test.use = "MAST", layer = "data", latent.vars = c("nCount_RNA", "S.Score", "G2M.Score"))
+DEG3 <- FindMarkers(seurat_integrated_ME,  ident.1 = "4-6 wpi", ident.2 = "Uninjured", logfc.threshold = 0, min.pct = 0.05, test.use = "MAST", layer = "data", latent.vars = c("dataset", "nCount_RNA"))
 
 DEG3$Gene <- rownames(DEG3)
-
 DEG3$p_val_adj <- ifelse(DEG3$p_val_adj == 0, 1e-305, DEG3$p_val_adj)
-
 DEG3$Time <- "4-6 wpi"
-
-volcanoplot3 <- EnhancedVolcano(DEG3, lab = rownames(DEG3), x = "avg_log2FC", y = "p_val_adj", pCutoff = 0.05, FCcutoff = 0.75, title = "Differential expression between Uninjured and Acute conditions", drawConnectors = T, labSize = 3)
-
-ggsave("~/R/Figures/Volcano_4-6wpi.png", volcanoplot3, dpi = 1080, height = 7, width = 9)
 
 write.xlsx(DEG3, "~/R/Downloads/DEG_Sub-Chronic.xlsx")
 
 ##############################################################################################################
 
-DEG4 <- FindMarkers(seurat_integrated_ME,  ident.1 = "21 dpi", ident.2 = "Uninjured", logfc.threshold = 0, min.pct = 0.05, test.use = "MAST", layer = "data", latent.vars = c("nCount_RNA", "S.Score", "G2M.Score"))
+DEG4 <- FindMarkers(seurat_integrated_ME,  ident.1 = "21 dpi", ident.2 = "Uninjured", logfc.threshold = 0, min.pct = 0.05, test.use = "MAST", layer = "data", latent.vars = c("dataset", "nCount_RNA"))
 
 DEG4$Gene <- rownames(DEG4)
-
 DEG4$p_val_adj <- ifelse(DEG4$p_val_adj == 0, 1e-305, DEG4$p_val_adj)
-
 DEG4$Time <- "21 dpi"
-
-volcanoplot4 <- EnhancedVolcano(DEG4, lab = rownames(DEG4), x = "avg_log2FC", y = "p_val_adj", pCutoff = 0.05, FCcutoff = 0.75, title = "Differential expression between Uninjured and Acute conditions", drawConnectors = T, labSize = 3)
-
-ggsave("~/R/Figures/Volcano_21dpi.png", volcanoplot4, dpi = 1080, height = 7, width = 9)
 
 write.xlsx(DEG4, "~/R/Downloads/DEG_21dpi.xlsx")
 
 ##############################################################################################################
 
-
-
 ```
 
 ```{r}
+
+DEG_21dpi <- read_excel("~/R/Downloads/DEG_21dpi.xlsx")
+DEG_1mpi <- read_excel("~/R/Downloads/DEG_Sub-Chronic.xlsx")
+DEG_1dpi <- read_excel("~/R/Downloads/DEG_FirstDay.xlsx")
+DEG_7dpi <- read_excel("~/R/Downloads/DEG_Acute.xlsx")
 
 # DEGs <- bind_rows(DEG, DEG2, DEG3, DEG4)
 DEGs <- bind_rows(DEG_1dpi, DEG_7dpi, DEG_21dpi, DEG_1mpi)
@@ -487,7 +485,7 @@ peaks_abs <- DEGs %>%
   ungroup()
 
 peaks_filtered <- peaks_abs %>%
-  filter(abs_log2FC > 0.5)
+  filter(abs_log2FC > 0.585)
 
 counts_abs <- peaks_filtered %>%
   group_by(Time) %>%
@@ -513,25 +511,9 @@ histo <- ggplot(counts_abs, aes(x = Time, y = n_genes)) +
     axis.text.y = element_text(size = 16)
   )
 
-ggsave("~/R/Figures2/Histogram_PeakExpression2.png", histo, width = 10, height = 8,  dpi = 1080)
+ggsave("~/R/Figures2/Histogram_PeakExpression2.png", histo, width = 10, height = 10,  dpi = 1080)
 
 ``` 
 
-Markers for each celltype
 
-```{r}
-
-Idents(seurat_integrated) <- "celltype"
-markers <- FindAllMarkers(seurat_integrated, test.use = "MAST")
-
-top_genes <- markers %>%
-  group_by(cluster) %>%
-  top_n(5, avg_log2FC) %>%
-  pull(gene)
-
-# DotPlot
-dotplot <- DotPlot(seurat_integrated, features = top_genes) +
-  RotatedAxis()
-
-```
 
